--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <p class="derechaNegro">Autorización Número: AUT5380BEVL07082025020184821</p>
 
 					<p class="justificado">Que el permisionario denominado
-						LUIS ALBERTO BERRELEZA con Registro Federal de
+						LUIS ALBERTO BERRELEZA VILLA con Registro Federal de
 						Contribuyentes BEVL891220247, se encuentra
 						debidamente registrada ante la Secretaría de Infraestructura
 						Comunicaciones y Transportes al haber acreditado que dentro de su
@@ -107,7 +107,7 @@
 						facultades de la Secretaría de Infraestructura Comunicaciones y
 						Transportes, se otorga a través de la
 						Dirección General de Autotransporte Federal, Autorización Expresa a la
-						empresa denominada, LUIS ALBERTO BERRELEZA para la
+						empresa denominada, LUIS ALBERTO BERRELEZA VILLA para la
 						circulación en configuración de tractocamión doblemente articulado
 						para el vehículo que se describe a continuación:</p>
 
